Correction du bug de selection (texte invisible)

--- a/src/PiggyBox/UserBundle/Resources/public/less/styles.less
+++ b/src/PiggyBox/UserBundle/Resources/public/less/styles.less
@@ -843,7 +843,7 @@ label[for*="piggybox_orderbundle_carttype_orders"] {
 {
 	background:url(../img/home-map-background.png); 
 	width:1055px; 
-	height:518px; 
+	height:528px; 
 	border:4px black solid;
 
 	.content
@@ -1000,14 +1000,6 @@ ul.testimonials {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-
-::selection {
-    background: transparent; 
-}
-
-::-moz-selection {
-    background: transparent; 
 }
 
 .wrapper-demo {
